--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data/tmp"]
 	path = data/tmp
-	url = http://www.modelscope.cn/damo/cv_manual_face-detection_tinymog.git
+	url = https://www.modelscope.cn/wenmengzhou/zwm_test_data.git
